--- a/login.html
+++ b/login.html
@@ -8,18 +8,21 @@
 </head>
 
 <body>
-
 <div class="content">
     <form name="login" method="post" action="">
         <div class="form sign-in">
             <h2>欢迎回来！同学们</h2>
             <label>
                 <span>学号</span>
-                <input type="text" />
+                <input type="text"/>
             </label>
             <label>
                 <span>密码</span>
-                <input type="password" />
+                <input type="password"/>
+            </label>
+            <label>
+                <span>记住我</span>
+                <input type="checkbox" value="">
             </label>
             <p class="forgot-pass"><a href="javascript:">忘记密码？</a></p>
             <button type="submit" class="submit">登 录</button>
@@ -50,25 +53,26 @@
                 <h2>立即注册</h2>
                 <label>
                     <span>用户名</span>
-                    <input type="text" />
+                    <input type="text"/>
                 </label>
                 <label>
                     <span>学号</span>
-                    <input type="text" />
+                    <input type="text"/>
                 </label>
                 <label>
                     <span>密码</span>
-                    <input type="password" />
+                    <input type="password"/>
                 </label>
                 <button type="submit" class="submit">注 册</button>
-                <button type="reset" class="fb-btn"> <span>重置</span> </button>
+                <button type="reset" class="fb-btn"><span>重置</span></button>
             </div>
         </form>
     </div>
 </div>
 
+
 <script type="text/javascript">
-    document.querySelector('.img__btn').addEventListener('click', function() {
+    document.querySelector('.img__btn').addEventListener('click', function () {
         document.querySelector('.content').classList.toggle('s--signup')
     })
 </script>
