--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>登录注册页面</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" sizes="any" href="images/favicon.ico">
 </head>
 
 <body>
