修改login_check.php

--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
                 <span class="m--in">登 录</span>
             </div>
         </div>
-        <form name="register" method="post" action="">
+        <form name="register" method="post" action="login_check.php">
             <div class="form sign-up">
                 <h2>立即注册</h2>
                 <label>
