--- a/login.html
+++ b/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
     <meta charset="utf-8">
     <title>登录注册页面</title>
@@ -8,7 +7,6 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="icon" sizes="any" href="images/favicon.ico">
 </head>
-
 <body>
 <div class="content">
     <form name="login" method="post" action="login_check.php">
@@ -73,14 +71,13 @@
     </div>
 </div>
 
-
 <script type="text/javascript">
     document.querySelector('.img__btn').addEventListener('click', function () {
         document.querySelector('.content').classList.toggle('s--signup')
     })
 </script>
+<script src="js/login.js"></script>
 <script src="js/register.js"></script>
 <script src="js/md5.js"></script>
 </body>
-
 </html>
